data/all_generated_tests/raw_wast_tests/br_if_ImproperFunctionCallorReturnHandling_1792.wast
;; 3. **Test Description**:    - **Test Name**: Nested Function Call with Conditional Branch    - **Description**: Test a `br_if` within nested function calls, where the branch condition depends on the return value of an inner function.    - **Constraint Check**: Ensures correct stack handling and branching within nested calls.    - **Improper Handling**: Tests for correct function nesting and return value management.

(assert_invalid
  (module 
    (func $nested_branch (param $x i32) (result i32)
      (block (result i32)
        (call $inner_func (local.get $x))
        (br_if 0 (i32.const 1))
        (i32.const 0)
      )
    )
    (func $inner_func (param $y i32) (result i32)
      (i32.add (local.get $y) (i32.const 10))
    )
  )
  "type mismatch"
)